Modif visuel editeur

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,8 @@
 body {
   background-color: teal;
-  color: white;
+  color: white; }
+
+h1 {
   text-align: center; }
 
 #container {
@@ -19,6 +21,7 @@ body {
   margin-left: 10px;
   height: 300px;
   width: 600px;
-  background-color: white; }
+  background-color: white;
+  color: black; }
 
 /*# sourceMappingURL=style.css.map */
