--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,6 +22,6 @@ h1 {
   height: 300px;
   width: 600px;
   background-color: white;
-  color: black; }
+  color: blue; }
 
 /*# sourceMappingURL=style.css.map */
