--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,26 +1,28 @@
 body {
 	background-color:teal;
 	color:white;
+	box-sizing:border-box;
+	font-family: 'Lato', sans-serif;
 }
+
 h1{
 	text-align:center;
 }
 	
-
-#container{
+.container{
 	display: flex;
 	justify-content:center;
-}
-
-#editor{
-height: 300px;
-width:600px;
-}
-
-#reponseHtml{
-margin-left:10px;
-height: 300px;
-width:600px;
-background-color:white;	
-color:black;
+	#editor{
+		height: 300px;
+		width:600px;
+	}
+	#reponseHtml{
+		margin-left:10px;
+		height: 300px;
+		width:600px;
+		background-color:white;	
+		color:blue;
+		border-left: solid 1px #e6e6e6;
+		padding:0 15px;
+	}
 }
