modif mineure du design

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,21 +7,21 @@ body {
 h1 {
   text-align: center; }
 
-.container {
+#container {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center; }
-  .container #editor {
+  #container #editor {
     height: 300px;
     width: 600px; }
-  .container #reponseHtml {
+  #container #reponseHtml {
     margin-left: 10px;
     height: 300px;
     width: 600px;
-    background-color: white;
+    background-color: grey;
     color: blue;
     border-left: solid 1px #e6e6e6;
     padding: 0 15px; }
