--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 body {
-  background-color: teal;
-  color: white;
+  background-color: #3ac569;
+  color: #534847;
   box-sizing: border-box;
   font-family: 'Lato', sans-serif; }
 
@@ -16,14 +16,14 @@ h1 {
   justify-content: center; }
   #container #editor {
     height: 300px;
-    width: 600px; }
+    width: 600px;
+    overflow: auto; }
   #container #reponseHtml {
     margin-left: 10px;
     height: 300px;
     width: 600px;
-    background-color: grey;
-    color: blue;
-    border-left: solid 1px #e6e6e6;
-    padding: 0 15px; }
+    background-color: #dadbdb;
+    padding: 0 15px;
+    overflow: auto; }
 
 /*# sourceMappingURL=style.css.map */
