--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -4,25 +4,52 @@ body {
 	box-sizing:border-box;
 	font-family: 'Lato', sans-serif;
 }
-
-h1{
-	text-align:center;
+.input-field label{
+	color: black;
+}
+nav{
+	width: 50%;
+	margin:auto;
+	background-color:#534847;
+	.input-field{
+	margin-top:3em;
+	width: 100%;
+	}
 }
 	
 #container{
+	margin-top:3em;
 	display: flex;
 	justify-content:center;
 	#editor{
-		height: 300px;
-		width:600px;
+		height: 100%;
+		width:33%;
 		overflow: auto;
 	}
 	#reponseHtml{
 		margin-left:10px;
 		height: 300px;
-		width:600px;
+		width:33%;
 		background-color:#dadbdb;
 		padding:0 15px;
 		overflow: auto;
 	}
+	#listedocs{
+		background-color: #88dba3;
+		width:33%;
+		margin-left:10px;
+		h5{
+			text-align: center;
+		}
+	}
+}
+
+#boutons{
+	text-align:center;
+	margin-top: 3em;
+	.waves-effect{
+		background-color:#534847;
+		margin-left:1em;
+	}
+
 }
